resolved bug in Navbar link and aligned "see all" button in right

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -128,7 +128,6 @@ input[type=number] {
 }
 
 .activeNav {
-  font-weight: 800;
   color: rgb(247, 247, 4); /* Or any other style you want to apply to the active link */
  }
 
